# check-list

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_RU.md  conanfile.txt
.github/workflows/: build_test.yml  docker.yml  gtests.yml  package.yml  packege.yml
include/task/: Task.hpp
scripts/: build.sh  clean.sh  create_env.sh
src/: Task.cpp  Task.hpp  bot.cpp  main.cpp  todo.cpp
src/bot/: Bot.cpp  Bot.hpp  CMakeLists.txt  CommandHandler.cpp  CommandHandler.hpp  Message.cpp  Message.hpp
src/parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/task/: CMakeLists.txt  Task.cpp  Task.hpp
tests/: CMakeLists.txt  TestParser.cpp  TestTask.cpp  task_test.cpp
